# KajovoChat

./: .gitignore  README.md  START.BAT  Seznam oprávněných osob.txt  app_gui.py  pyproject.toml  requirements.txt  run_kajovochat.bat  stats-in_out-2025-08-01-2026-04-30.csv  zip.ps1
LOG/: kajovochat_20260202_020103.jsonl  kajovochat_20260202_025315.jsonl  kajovochat_20260202_025802.jsonl  kajovochat_20260202_033702.jsonl  kajovochat_20260202_040802.jsonl  kajovochat_20260202_044825.jsonl  kajovochat_20260202_044825.txt  kajovochat_20260202_045427.jsonl  kajovochat_20260202_045427.txt  kajovochat_20260202_083531.jsonl  kajovochat_20260202_083531.txt  kajovochat_20260202_083611.jsonl  kajovochat_20260202_083611.txt  kajovochat_20260202_083620.jsonl  kajovochat_20260202_083620.txt  kajovochat_20260202_123320.jsonl  kajovochat_20260202_123320.txt  kajovochat_20260202_123440.jsonl  kajovochat_20260202_123440.txt  kajovochat_20260202_123455.jsonl  kajovochat_20260202_123455.txt  kajovochat_20260202_123557.jsonl  kajovochat_20260202_123557.txt  kajovochat_20260202_123618.jsonl  kajovochat_20260202_123618.txt  kajovochat_20260203_183022.jsonl  kajovochat_20260203_183022.txt  kajovochat_20260203_194035.jsonl  kajovochat_20260203_194035.txt  kajovochat_20260203_195640.jsonl  kajovochat_20260203_195640.txt  kajovochat_20260203_200951.jsonl  kajovochat_20260203_200951.txt  kajovochat_20260203_201537.jsonl  kajovochat_20260203_201537.txt  kajovochat_20260203_201851.jsonl  kajovochat_20260203_201851.txt  kajovochat_20260203_201854.jsonl  kajovochat_20260203_201854.txt  (+6 more)
(+14 files in other folders)
