[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-kaja"
version = "0.1.0"
description = "Chatbot Kája – hlasový asistent (hands-free / push-to-talk)"
requires-python = ">=3.11,<3.15"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["kajovochat"]
